[project]
name = "terminalcolorpy"
version = "1.0.0"
authors = [
  { name="novusys", email="amarftw1@gmail.com" },
]
description = "Lightweight package to print colorized messages using ASCI escape sequences to the terminal."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Build Tools",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.10",
        "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/novusys/terminalcolorpy/"
"Bug Tracker" = "https://github.com/novusys/terminalcolorpy/issues"